# verzekeringen-backend

./: .env.development  .env.example  .env.production  .env.template  .gitignore  Jenkinsfile  README.md  justfile  pyproject.toml  readme.md  requirements.txt  scenarios.ods
.github/workflows/: codeql.yml
dev/initial_data/: groups.yaml
docker/: Dockerfile
etc/: requirements.txt  scenarios.txt
insomnia/: verzekeringen.insomnia.json
migrations/: 001_temporary_vehicle_insurance.sql  002_non_member.sql
tests/: test_settings.py
verzekeringen_api/: manage.py
verzekeringen_api/apps/base/: exceptions.py  filters.py  serializers.py  utils.py
verzekeringen_api/apps/equipment/: apps.py  enums.py  filters.py  managers.py  models.py  urls.py  utils.py
verzekeringen_api/apps/files/: models.py  urls.py
verzekeringen_api/apps/info/: models.py  urls.py
verzekeringen_api/apps/insurances/: apps.py  filters.py  urls.py  utils.py
verzekeringen_api/apps/locations/: filters.py  location_views.py  member_serializers.py  models.py  serializers.py  urls.py  utils.py  views.py
verzekeringen_api/apps/mailing/: __init__.py  services.py
verzekeringen_api/apps/members/: enums.py  managers.py  models.py  urls.py  utils.py
verzekeringen_api/apps/oidc/: auth.py
verzekeringen_api/apps/people/: filters.py  managers.py  urls.py
verzekeringen_api/apps/scouts_auth/: utils.py
verzekeringen_api/apps/signals/: __init__.py  apps.py  signal_handler.py
verzekeringen_api/apps/utils/: __init__.py  apps.py
verzekeringen_api/groupadmin/: apps.py  urls.py  utils.py
verzekeringen_api/groupadmin/migrations/: 0001_initial.py  0002_rename_phone_scoutsuser_phone_number.py
verzekeringen_api/groupadmin/models/: __init__.py  scouts_user.py
verzekeringen_api/groupadmin/serializers/: __init__.py  belgian_postcode_city_serializer.py  ga_address_serializer.py  ga_allowed_calls_serializer.py  ga_contact_serializer.py  ga_field_group_specific_serializer.py  ga_field_value_serializer.py  ga_function_serializer.py  ga_group_serializer.py  ga_grouping_serializer.py  ga_link_serializer.py  ga_member_medical_flash_card_serializer.py  ga_member_serializer.py  ga_position_serializer.py  ga_profile_serializer.py  ga_response_function_list_serializer.py  ga_response_group_list_serializer.py  ga_response_member_list_serializer.py  ga_response_member_search_serializer.py  ga_response_serializer.py  group_admin_detail_serializer.py  group_admin_list_serializer.py  scouts_user_serializer.py
verzekeringen_api/groupadmin/services/: __init__.py  group_admin.py  group_admin_group_service.py  group_admin_member_service.py  scouts_authorization_service.py  scouts_oidc.py
verzekeringen_api/groupadmin/views/: __init__.py  ga_allowed_calls_viewset.py  ga_function_viewset.py  ga_group_viewset.py  ga_member_list_viewset.py  ga_member_medical_flash_card_viewset.py  ga_member_viewset.py  ga_partial_member_viewset.py
verzekeringen_api/initial_data/: roles.yaml
verzekeringen_api/inuits/aws/: __init__.py  media_storage_service.py  s3_storage_service.py
verzekeringen_api/inuits/enums/: gender.py
verzekeringen_api/inuits/exceptions/: drf_exception_handler.py
verzekeringen_api/inuits/files/: file_service.py  serializers.py  storage_service.py  urls.py  validators.py  views.py
verzekeringen_api/inuits/filters/: filters.py
verzekeringen_api/inuits/mail/: __init__.py  mail_model.py  mail_service.py  mail_service_exception.py
verzekeringen_api/inuits/migrations/: 0001_initial.py
verzekeringen_api/inuits/mixins/: flatten_serializer_mixin.py
verzekeringen_api/inuits/models/: __init__.py  abstract_model.py  audited_base_model.py  fields.py  persisted_file_model.py
verzekeringen_api/inuits/serializers/: __init__.py  non_model_serializer.py
verzekeringen_api/inuits/utils/: __init__.py  global_settings_util.py  multipart_json_parser.py  text_utils.py
verzekeringen_api/resources/mail/: claim.html  claim_notification.html  declarant.html  insurance_requester.html  insurer.html  stakeholder.html
verzekeringen_api/scouts_auth/: __init__.py  apps.py  oidc.py  settings.py  urls.py  util.py  utils.py
verzekeringen_api/scouts_auth/auth/: oidc.py
verzekeringen_api/scouts_auth/groupadmin/: urls.py  utils.py
verzekeringen_api/scouts_auth/migrations/: 0001_initial.py  0002_alter_scoutsuser_gender.py  0002_auto_20211102_1812.py  0002_auto_20211230_1059.py  0003_auto_20211109_1725.py  0003_auto_20220105_1538.py
verzekeringen_api/scouts_auth/models/: __init__.py  user.py
verzekeringen_api/scouts_auth/serializers/: __init__.py  belgian_postcode_city_serializer.py  ga_address_serializer.py  ga_contact_serializer.py  ga_link_serializer.py  ga_member_list_serializer.py  ga_member_medical_flash_card_serializer.py  ga_member_serializer.py  ga_response_member_list_serializer.py  ga_response_member_search_serializer.py  ga_response_serializer.py  ga_scouts_function_serializer.py  ga_scouts_group_serializer.py  ga_scouts_group_wrapped_serializer.py  group_admin_detail_serializer.py  group_admin_link_serializer.py  group_admin_list_serializer.py  member_serializer.py  partial_scouts_user_serializer.py  scouts_function_serializer.py  scouts_group_serializer.py  user_serializer.py
verzekeringen_api/scouts_auth/services/: __init__.py  group_admin.py  group_admin_group_service.py  group_admin_member_service.py  oidc_service.py  permission_service.py
verzekeringen_api/scouts_auth/signals/: __init__.py  scouts_auth_signal.py  scouts_auth_signal_handler.py
verzekeringen_api/scouts_auth/views/: __init__.py  current_user_view.py  ga_function_view.py  ga_group_view.py  ga_group_viewset.py  ga_member_list_view.py  ga_member_list_viewset.py  ga_member_medical_flash_card_view.py  ga_member_view.py  ga_member_viewset.py  ga_partial_member_view.py  group_admin_member_detail_view.py  group_admin_member_search_view.py  group_admin_view.py  oidc_auth_code_view.py  (+1 more)
verzekeringen_api/scouts_insurances/: apps.py  urls.py
verzekeringen_api/verzekeringen_api/: __init__.py  apps.py  asgi.py  settings.py  signal_catcher.py  urls.py  wsgi.py
(+609 files in other folders)
