[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
target-version = ['py37']
exclude = '''
/(
  | migrations
)/

'''


[tool.poetry]
name = "verzekeringen.api"
version = "0.1.0"
description = "The api for scouts verzekeringen"
authors = ["Jonas Elst <jonas.elst@inuits.eu>", "Stijn Verholen <boro@inuits.eu>"]

[tool.poetry.dependencies]
python = "^3.9"

boto3 = "^1.30"
Django = "^3.2"
dj-email-url = "^1.0"
django-anymail = {extras = ["sendinblue"], version = "^10.2"}
django-cors-headers = "^4.3"
django-filter = "^23.5"
django-storages = "^1.11"
# djangorestframework = "^3.12.1, !3.14"
djangorestframework = "3.12.1"
drf-yasg2 = "^1.19"
environs = "^10.0"
jsonfield = "^3.1"
mozilla-django-oidc = ">=2.0" # @TODO
packaging = "^23.2"
pdfrw = "^0.4"
psycopg2-binary = "^2.9"
pyjwt = "^2.3"
PyYAML = "^6.0"
urllib3= "1.26.18"


# @TODO
#scouts-auth = {git = "ssh://git@gitlab.inuits.io:2224/boro/scouts_auth.git", rev = "master"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"

