# syntax-documentation:
#  - https://python-poetry.org/docs/pyproject
#  - https://flit.readthedocs.io/en/latest/pyproject_toml.html
#
# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
#
#   > poetry install
#   > poetry install --only docs
#   > poetry install (--with|--without) (docs|dev|ipython|profiling|testing|typing)

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
target-version = ['py37']
exclude = '''
/(
  | migrations
)/

'''


[tool.poetry]
name = "verzekeringen.api"
version = "0.1.0"
description = "The api for scouts verzekeringen"
authors = [
    "Jonas Elst <jonas.elst@inuits.eu>", 
    "Stijn Verholen <boro@inuits.eu>",
    ]
maintainers = [
    "Tinus Van Langendonck <tvl@scoutsengidsenvlaanderen.be>",
    "Wouter Vanden Hove <wouter@libranet.eu>",
    ]
homepage = "https://github.com/ScoutsGidsenVL/verzekeringen-backend"
repository = "https://github.com/ScoutsGidsenVL/verzekeringen-backend"
keywords = ["django", "scouts", "verzekeringen"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"

boto3 = ">=1.30"
Django = "^3.2"
dj-email-url = ">=1.0"
django-anymail = {extras = ["sendinblue"], version = ">=10.2"}
django-cors-headers = ">=3.7"
django-filter = ">=23.5"
django-storages = ">=1.11"
# djangorestframework = "^3.12.1, !3.14"
djangorestframework = "3.14.0"
drf-yasg2 = ">=1.19"
environs = ">=10.0"
jsonfield = ">=3.1"
mozilla-django-oidc = ">=2.0" # @TODO
packaging = ">=23.2"
pdfrw = ">=0.4"
psycopg2-binary = ">=2.9"
pyjwt = ">=2.3"
PyYAML = ">=6.0"
urllib3 = "1.26.18"


# @TODO
#scouts-auth = {git = "ssh://git@gitlab.inuits.io:2224/boro/scouts_auth.git", rev = "master"}


[tool.poetry.group.dev.dependencies]
autoread-dotenv = ">=1.0.2"
ruff = ">=0.0"

[tool.poetry.group.ipython.dependencies]
ipdb = ">=0.13"
ipython = ">=8.4"

[tool.poetry.group.testing.dependencies]
coverage = { extras = ["toml"], version = ">=6.2" }
hypothesis = ">=6.72"
# nox = ">=2022.11"
# nox-poetry = ">=1.0"
pytest = ">=7.0"
pytest-clarity = ">=1.0"
pytest-codecov = ">=0.5"
pytest-cov = ">=3.0"
pytest-click = ">=1.1"
pytest-django = ">=4.5.2"
pytest-mock = ">=3.6"
pytest-xdist = ">=3.2"
# tox = ">=4.0"


[tool.pytest.ini_options]
# cache_dir = "var/cache/pytest"  # relative to $PWD, use PYTEST_CACHE_DIR instead
log_cli = false                   # enable to show log-output
log_cli_level = "NOTSET"
filterwarnings = []
markers = ["unit", "integration"]
testpaths = ["tests"]
# the junit-report is used to report coverage in gitlab
addopts = "--color=yes --junit-xml='var/coverage/pytest.xml'"
DJANGO_SETTINGS_MODULE = "verzekeringen_api.settings"
pythonpath = [".", "verzekeringen_api"]



[tool.ruff]
# ruff searches for settings in the target-dir and up
# https://docs.astral.sh/ruff/configuration
cache-dir = "var/cache/ruff"
line-length = 120
